Curve shapes do not render untill extruded (both cycles and internal) #52981

Closed
opened 2017-10-03 11:51:21 +02:00 by Denis Belov · 7 comments

System Information
Win7x64,GTX 1070

Blender Version
Broken: blender-2.79.0-git.864a53e-windows64
Worked: blender-2.79.0-git.bb4a129-windows64

Short description of error
Curve shapes do not render untill extruded.

Exact steps for others to reproduce the error
Create curve shape (circle for example) and try to render - nkthing rendered.
Set extrusion to some value - renders ok.

curve.blend

**System Information** Win7x64,GTX 1070 **Blender Version** Broken: blender-2.79.0-git.864a53e-windows64 Worked: blender-2.79.0-git.bb4a129-windows64 **Short description of error** Curve shapes do not render untill extruded. **Exact steps for others to reproduce the error** Create curve shape (circle for example) and try to render - nkthing rendered. Set extrusion to some value - renders ok. [curve.blend](https://archive.blender.org/developer/F933797/curve.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

This issue was referenced by blender/cycles@264335952d

This issue was referenced by blender/cycles@264335952de96b178ccc3ba1115b1be38eb62d8e

This issue was referenced by 61d5c5a64f

This issue was referenced by 61d5c5a64ff7c59be6756144ab9720f9247061a9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Sergey

Added subscriber: @Sergey

Fixed Cycles part. Blender Internal was always behaving like that, better not change it now. This renderer is EOL...

Fixed Cycles part. Blender Internal was always behaving like that, better not change it now. This renderer is EOL...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52981
No description provided.