Fix T52981: 2D Curve shapes do not render untill extruded

Regression since 9298c53.